// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Icon className="my-classname" 1`] = `
<span
  className="uu5-bricks-icon my-classname mdi mdi-check"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon clickable=false 1`] = `
<span
  className="uu5-bricks-icon mdi mdi-check uu5-bricks-icon-notclickable"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon clickable=true 1`] = `
<span
  className="uu5-bricks-icon mdi mdi-check"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon controlled=false 1`] = `
<span
  className="uu5-bricks-icon mdi mdi-check"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon controlled=true 1`] = `
<span
  className="uu5-bricks-icon mdi mdi-check"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon default props 1`] = `
<span
  className="uu5-bricks-icon mdi mdi-check"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon disabled=false 1`] = `
<span
  className="uu5-bricks-icon mdi mdi-check"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon disabled=true 1`] = `
<span
  className="uu5-bricks-icon uu5-common-disabled mdi mdi-check"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</span>
`;

exports[`UU5.Bricks.Icon docKit examples UU5.Bricks.Icon should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <Icon
    id="uuID02"
    key="uuID02"
  />
  <Button
    colorSchema="info"
    id="butID"
    key="butID"
  >
    <Icon
      icon="mdi-magnify"
      id="uuID03"
    />
     Search
  </Button>
  <Link
    href="#"
    id="idLINK"
    key="idLINK"
  >
    <Icon
      icon="mdi-facebook"
      id="uuID04"
    />
  </Link>
</div>
`;

exports[`UU5.Bricks.Icon hidden=false 1`] = `
<span
  className="uu5-bricks-icon mdi mdi-check"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon hidden=true 1`] = `
<span
  className="uu5-bricks-icon uu5-common-hidden mdi mdi-check"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon icon="uu5-alert-circle" 1`] = `
<span
  className="uu5-bricks-icon uu5 uu5-alert-circle"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon icon="uu5-arrow-down" 1`] = `
<span
  className="uu5-bricks-icon uu5 uu5-arrow-down"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon icon="uu5-arrow-left" 1`] = `
<span
  className="uu5-bricks-icon uu5 uu5-arrow-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon icon="uu5-arrow-right" 1`] = `
<span
  className="uu5-bricks-icon uu5 uu5-arrow-right"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon icon="uu5-arrow-up" 1`] = `
<span
  className="uu5-bricks-icon uu5 uu5-arrow-up"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon icon="uu5-calendar" 1`] = `
<span
  className="uu5-bricks-icon uu5 uu5-calendar"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon icon="uu5-clock" 1`] = `
<span
  className="uu5-bricks-icon uu5 uu5-clock"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon icon="uu5-cross" 1`] = `
<span
  className="uu5-bricks-icon uu5 uu5-cross"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon icon="uu5-error-circle" 1`] = `
<span
  className="uu5-bricks-icon uu5 uu5-error-circle"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon icon="uu5-finder" 1`] = `
<span
  className="uu5-bricks-icon uu5 uu5-finder"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon icon="uu5-flag-upload" 1`] = `
<span
  className="uu5-bricks-icon uu5 uu5-flag-upload"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon icon="uu5-menu" 1`] = `
<span
  className="uu5-bricks-icon uu5 uu5-menu"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon icon="uu5-minus" 1`] = `
<span
  className="uu5-bricks-icon uu5 uu5-minus"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon icon="uu5-ok" 1`] = `
<span
  className="uu5-bricks-icon uu5 uu5-ok"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon icon="uu5-ok-circle" 1`] = `
<span
  className="uu5-bricks-icon uu5 uu5-ok-circle"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon icon="uu5-person" 1`] = `
<span
  className="uu5-bricks-icon uu5 uu5-person"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon icon="uu5-picture" 1`] = `
<span
  className="uu5-bricks-icon uu5 uu5-picture"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon icon="uu5-plus" 1`] = `
<span
  className="uu5-bricks-icon uu5 uu5-plus"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon icon="uu5-point" 1`] = `
<span
  className="uu5-bricks-icon uu5 uu5-point"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon icon="uu5-thumb" 1`] = `
<span
  className="uu5-bricks-icon uu5 uu5-thumb"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon id="myId" 1`] = `
<span
  className="uu5-bricks-icon mdi mdi-check"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon mainAttrs=undefined 1`] = `
<span
  className="uu5-bricks-icon mdi mdi-check"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon name="myName" 1`] = `
<span
  className="uu5-bricks-icon mdi mdi-check"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon nestingLevel="bigBox" 1`] = `
<span
  className="uu5-bricks-icon mdi mdi-check"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon nestingLevel="bigBoxCollection" 1`] = `
<span
  className="uu5-bricks-icon mdi mdi-check"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon nestingLevel="box" 1`] = `
<span
  className="uu5-bricks-icon mdi mdi-check"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon nestingLevel="boxCollection" 1`] = `
<span
  className="uu5-bricks-icon mdi mdi-check"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon nestingLevel="container" 1`] = `
<span
  className="uu5-bricks-icon mdi mdi-check"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon nestingLevel="inline" 1`] = `
<span
  className="uu5-bricks-icon mdi mdi-check"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon nestingLevel="page" 1`] = `
<span
  className="uu5-bricks-icon mdi mdi-check"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon nestingLevel="smallBox" 1`] = `
<span
  className="uu5-bricks-icon mdi mdi-check"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon nestingLevel="smallBoxCollection" 1`] = `
<span
  className="uu5-bricks-icon mdi mdi-check"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon nestingLevel="spa" 1`] = `
<span
  className="uu5-bricks-icon mdi mdi-check"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon noIndex=false 1`] = `
<span
  className="uu5-bricks-icon mdi mdi-check"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon noIndex=true 1`] = `
<span
  className="uu5-bricks-icon uu5-noindex mdi mdi-check"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon pureRender=false 1`] = `
<span
  className="uu5-bricks-icon mdi mdi-check"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon pureRender=true 1`] = `
<span
  className="uu5-bricks-icon mdi mdi-check"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon selected=false 1`] = `
<span
  className="uu5-bricks-icon mdi mdi-check"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon selected=true 1`] = `
<span
  className="uu5-bricks-icon uu5-common-selected mdi mdi-check"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Icon style="padding:8px; borderRadius: 2px" 1`] = `
<span
  className="uu5-bricks-icon mdi mdi-check"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Icon style={"backgroundColor":"red","color":"blue"} 1`] = `
<span
  className="uu5-bricks-icon mdi mdi-check"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Icon tooltip="My Tooltip" 1`] = `
<span
  className="uu5-bricks-icon mdi mdi-check"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
